Fixed Misaligned placeholder

--- a/client/sass/_main.scss
+++ b/client/sass/_main.scss
@@ -70,6 +70,10 @@ body {
     #title, #author {
       outline: none;
     }
+
+    .medium-editor-placeholder:after {
+      padding: inherit;
+    }
   }
 
   p {
